@@ -2,11 +2,12 @@ ChangeLog file for Endian libencloud
 
 libencloud 0.X.Y:
 	- api/status: empty errors not being reemitted
+	- *ece: don't getCertificate if we already have a valid one;
+	  fail if getInfo yields valid=false
 	- conf: user/pass vs x509 auth is configurable
 	- error: new Retry object
 	- vpn: 'client' wasn't being dumped, handle retries
 	- test: scripts/vpncli.sh extensions for *ECE testing; SECE sample wip
-	- *ece: fail if getInfo yields valid=false
 
 libencloud 0.6.1 (15/04/2014):
 	- custom ProxyFactory to avoid proxying localhost requests;
